# lions-own-file-browser

./: .gitignore  CLAUDE.md  README.md  agents.json  check-list.txt  pyproject.toml  registry.json
docs/conversations/: conversations-track.txt
docs/spec/: README.md
src/focus_explorer/: __init__.py  __main__.py  cli.py  command_bar.py  commands.py  focus_explorer.py  overlay.py  panes.py  state.py  ui.py  ui_app.py  ui_command_bar.py  ui_overlay.py  ui_panes.py  ui_temple_dialog.py
